@@ -106,30 +106,39 @@ switch ($sortField) {
 $agents = false;
 if ($searchAgents) {
 	$sql = "
-		FROM tagente AS t1
-			INNER JOIN tgrupo
-				ON tgrupo.id_grupo = t1.id_grupo
-		WHERE (t1.id_grupo IN (
-				SELECT id_grupo 
-				FROM tusuario_perfil 
-				WHERE id_usuario = '" . $config['id_user'] . "' 
-					AND id_perfil IN (
-						SELECT id_perfil 
-						FROM tperfil WHERE agent_view = 1
-					)
-			)
-			OR 0 IN (
-				SELECT id_grupo
-				FROM tusuario_perfil
-				WHERE id_usuario = '" . $config['id_user'] . "'
-				AND id_perfil IN (
-					SELECT id_perfil
-					FROM tperfil WHERE agent_view = 1
-				) 
-			)
-		) AND
-		t1.nombre COLLATE utf8_general_ci LIKE '%" . $stringSearchSQL . "%' OR
-			tgrupo.nombre LIKE '%" . $stringSearchSQL . "%'";
+          FROM tagente AS t1
+               INNER JOIN tgrupo AS t2
+                    ON t2.id_grupo = t1.id_grupo
+          WHERE
+               (1 = (
+                         SELECT is_admin FROM tusuario WHERE id_user = '" . $config['id_user'] . "'
+                    )
+               )
+               OR
+               (t1.id_grupo IN (
+                    SELECT id_grupo 
+                    FROM tusuario_perfil 
+                    WHERE id_usuario = '" . $config['id_user'] . "' 
+                         AND id_perfil IN (
+                              SELECT id_perfil 
+                              FROM tperfil WHERE agent_view = 1
+                         )
+               )
+               OR 0 IN (
+                    SELECT id_grupo
+                    FROM tusuario_perfil
+                    WHERE id_usuario = '" . $config['id_user'] . "'
+                        AND id_perfil IN (
+                            SELECT id_perfil
+                            FROM tperfil WHERE agent_view = 1
+                        )
+               )
+          )
+          AND (
+               t1.nombre COLLATE utf8_general_ci LIKE '%%" . $stringSearchSQL . "%%' OR
+               t2.nombre COLLATE utf8_general_ci LIKE '%%" . $stringSearchSQL . "%%'
+          )
+	";
 
 	
 	$select = "SELECT t1.id_agente, t1.ultimo_contacto, t1.nombre, t1.id_os, t1.intervalo, t1.id_grupo, t1.disabled";
