@@ -1,3 +1,12 @@
+2011-01-26  Miguel de Dios  <miguel.dedios@artica.es>
+
+	Merged bugfix from trunk
+
+	* operation/agentes/status_monitor.php: fixed the ACL in the Module name for
+	the select box in the filter.
+
+	* operation/search_agents.php: fixed the ACL in the search of agent.
+
 2011-01-24  Miguel de Dios  <miguel.dedios@artica.es>
 
 	Merged bugfix from trunk
